--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,14 +1,14 @@
-#name: Build and deploy workflow
-#on: [push]
-#jobs:
-#  build_and_push:
-#    runs_on: ubuntu-latest
-#    steps:
-#      - name: checkout
-#        uses: actions/checkout@v2
-#      - name: docker build
-#        run: docker build -t zoobych/todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
-#      - name: docker login
-#        run: pass
-#      - name: docker push
-#        run: pass
+name: Build and deploy workflow
+on: [ push ]
+jobs:
+  build_and_push:
+    runs_on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: docker build
+        run: docker build -t zoobych/todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker login
+        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u $ {{ secrets.DOCKER_USER }} --password-stdin
+      - name: docker push
+        run: docker push stepanovya/diplom:$GITHUB_REF_NAME-$GITHUB_RUN_ID
