--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,31 +1,40 @@
 version: '3.8'
+
 services:
   front:
     image: sermalenk/skypro-front:lesson-34
     ports:
-      - 8080:80
+      - '80:80'
     depends_on:
       - api
   api:
-    build:
-      context: .
-#    image: zoobych/todolist:v0.1.0
+    image: zoobych/todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    environment:
+      DEBUG: ${DEBUG}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      SECRET_KEY: ${SECRET_KEY}
     depends_on:
       db:
         condition: service_healthy
       migrations:
         condition: service_completed_successfully
-    volumes:
-      - ./.env:/todolist/.env
   migrations:
-    build:
-      context: .
-    image: zoobych/todolist
+    image: zoobych/todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    environment:
+      DEBUG: ${DEBUG}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      SECRET_KEY: ${SECRET_KEY}
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - ./.env:/todolist/.env
     command: python manage.py migrate
   db:
     image: postgres:14.6-alpine
@@ -37,7 +46,9 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - '${POSTGRES_PORT:-5432}:5432'
+    networks:
+      - default
     healthcheck:
       test: pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
       interval: 3s
