change_user_group

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -47,5 +47,5 @@ jobs:
           password: ${{secrets.PASSWORD }}
           script: |
             cd todolist
-            echo ${{ secrets.PASSWORD }} |  -S docker-compose down
-            echo ${{ secrets.PASSWORD }} |  -S docker-compose up -d
+            echo ${{ secrets.PASSWORD }} |  docker-compose down
+            echo ${{ secrets.PASSWORD }} |  docker-compose up -d
