--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SECRET_KEY=..
 POSTGRES_PASSWORD=posrgres
 POSTGRES_USER=posrgres
 POSTGRES_DB=posrgres
+SOCIAL_AUTH_VK_OAUTH2_KEY=11111
+SOCIAL_AUTH_VK_OAUTH2_SECRET=..
