--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ djangorestframework = "^3.14.0"
 social-auth-app-django = "^5.0.0"
 django-cors-headers = "^3.13.0"
 django-filter = "^22.1"
+marshmallow-dataclass = "^8.5.10"
+requests = "^2.28.1"
 
 
 [build-system]
