--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ django-cors-headers = "^3.13.0"
 django-filter = "^22.1"
 marshmallow-dataclass = "^8.5.10"
 requests = "^2.28.1"
+pytest-django = "^4.5.2"
+pytest-factoryboy = "^2.5.1"
+drf-spectacular = "^0.25.1"
 
 
 [build-system]
